# StorewellChallenge

./: CMakeLists.txt  README.md  main.c
lib/: MakeSquare.h
src/: MakeSquare.c
test/: test_MakeSquare.c
